--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.10.1",
+    "appwrite": "^17.0.0",
     "geist": "^1.3.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
