--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tabler/icons-react": "^3.30.0",
     "appwrite": "^17.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.1",
     "geist": "^1.3.0",
     "lucide-react": "^0.475.0",
+    "motion": "^12.4.2",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
